Bug 168712 - "Set Paragraph Style" - some Styles with Background won't show Font
Summary: "Set Paragraph Style" - some Styles with Background won't show Font
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-10-06 08:33 UTC by Robert Großkopf
Modified: 2025-10-09 19:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Writer document for testing (19.73 KB, application/vnd.oasis.opendocument.text)
2025-10-06 08:33 UTC, Robert Großkopf
Details
Screenshot of styles in Writer - missing fonts for some styles on the left… (222.43 KB, image/png)
2025-10-06 08:34 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2025-10-06 08:33:09 UTC
Created attachment 203156 [details]
Writer document for testing

Open the attached Writer document. It contains many different styles for German documentation.
Now click on the left "Set Paragraph Style". There are styles, which won't show any font.
Have a look at the sidebar. There the styles appear with the font.

This bug fist appears with LO 25.2.0.3, appears also with
Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Bug won't appear in LO 24.8.7.2 on the same system.

Have renamed the user profile for testing. Bug won't disappear.
Comment 1 Robert Großkopf 2025-10-06 08:34:11 UTC
Created attachment 203157 [details]
Screenshot of styles in Writer - missing fonts for some styles on the left…
Comment 2 m_a_riosv 2025-10-06 11:46:47 UTC
There are no missing, it is a color issue.
Reproducible
Version: 25.8.2.1 (X86_64)
Build ID: 345526217a4027cb1b9ab39bd7153c8c141a1d64
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 raal 2025-10-06 16:19:24 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Heiko Tietze ; Could you possibly take a look at this one?
Thanks
 4578c74fe1f8ca7d9907cb1242d2ec50452b2033 is the first bad commit
commit 4578c74fe1f8ca7d9907cb1242d2ec50452b2033
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Fri Aug 16 09:29:13 2024 +0200

    source 74d910231c5591f5e497fc52f2a0132c8f41a271

171862: Resolves tdf#161766 - WCAG 2.1 compliant luminance for isDark() | https://gerrit.libreoffice.org/c/core/+/171862
Comment 4 Heiko Tietze 2025-10-07 06:52:15 UTC
It's not the WCAG calculation - the document renders the automatic font color correctly as black - but the Stylist that apparently ignores Highlight and Area colors.

Quick workaround: Uncheck the "[x] Show previews" setting.
Comment 5 Commit Notification 2025-10-07 09:42:15 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e644ec9527e5bcc8ce9f30c9d57e810e02e2d2f3

Resolves tdf#168712 - Make style preview aware of highlight and area color

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2025-10-09 19:21:01 UTC
Nice, Heiko.

Bad in
Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Good in
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c89cfb8f292fda0dbe55e9bbc4cedca12b154fa9
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded