Resolves tdf#168712 - Make style preview aware of highlight and area color

If area or highlight color is set, the preview should calculate the
effective automatic font color as white or black depending on whether
this color isDark()

Change-Id: I6c821724ecf313e2100e0fdccabfcdaf015c529e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192006
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>